[project]
name = "resume-creator"
version = "0.1.0"
description = "Project to take a kind of interview and build a resume while storing relevant information in Parquet file"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "pytorch-triton-rocm ; sys_platform == 'linux'",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "langchain-ollama>=1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "tqdm>=4.66.5",
    "fastapi[standard]>=0.136.1",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.49",
    "duckdb-engine>=0.17.0",
    "pandas>=3.0.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
pytorch-triton-rocm = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
